fix: overflow issue

--- a/src/Slideshow/Slideshow.css
+++ b/src/Slideshow/Slideshow.css
@@ -19,7 +19,6 @@
 
 .react-slideshow-content-container {
     background-color: black;
-    overflow: hidden;
 }
 
 .react-slideshow-slide {
